Updated README; included generated docs; updated to v0.4.0
